--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
 <body>
-<header id="">
+<header id="header">
     <div class="">
     <div id="logo" class="">
     <a href="#intro" class=""><img src="img/logo.png" alt="" title=""></a>
