Mas clases al html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 <body>
 <header id="header">
-    <div class="">
+    <div class="container">
     <div id="logo" class="">
     <a href="#intro" class=""><img src="img/logo.png" alt="" title=""></a>
     </div>
 
-         <nav id="">
-        <ul class="">
+         <nav id="nav-menu-container">
+        <ul class="nav-menu">
           <li class=""><a href="#intro">INICIO</a></li>
           <li><a href="#nosotros">PUENTE</a></li>
           <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
@@ -40,8 +40,8 @@
 
   </header>
 
-    <section id="">
-    <div class="">
+    <section id="intro">
+    <div class="intro-container wow fadeIN">
       <h1 class="">Un puente<br><span> te une, atraviesa, te transporta, te comunica</span> a donde quieras.</h1>
       <a href="" class="" data-vbtype="video"
         data-autoplay="true"></a>
@@ -50,13 +50,13 @@
 
   <main>
   	<section id="#nosotros">
-      <div class="">
-        <div class="">
-          <div class="c">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
             <h2>Puente es</h2>
             <p>Información sobre lo que es puente para nosotros, para nuestros clientes. Como nacio y a que nos dedicamos. </p>
           </div>
-          <div class="">
+          <div class="col-lg-3">
             <h3></h3>
             <p></p>
           </div>
