--- a/index.html
+++ b/index.html
@@ -69,75 +69,33 @@
     </section>
   </main>
 
- <div id="#PORTFOLIO" class="">
-        <div class="">
+<section id="gallery" class="wow fadeInUp">
+ <div class="container">
+        <div class="section-header">
 
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
+            <div class="owl-carousel gallery-carousel">
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
               </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
+              </a>              
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
               </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
               </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
               </a>
-            </div>
-          </div>
+              <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel">
+                <img src="img/gallery/1.jpg" alt="" class="">
+              </a>                                                     </div>
+         </div>
+ </div>
 
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
-              </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
-              </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
-              </a>
-            </div>
-          </div>
-
-          <div class="">
-            <div class="">
-              <a href="" class="" data-gall="">
-                <img src="" alt="" class="">
-              </a>
-            </div>
-          </div>
-
-        </div>
-      </div>
+  
 
     </section>
    <section id="contact" class="section-bg wow fadeInUp">
@@ -148,27 +106,27 @@
           <h2>Contacto</h2>
         </div>
 
-        <div class="">
+        <div class="row contact-info">
 
-          <div class="">
-            <div class="">
-              <i class=""></i>
+          <div class="col-md-4">
+            <div class="contact-address">
+              <i class="ion-ios-location-outline"></i>
               <h3>Direccion</h3>
               <address>Direccion, calle, ciudad, pais.</address>
             </div>
           </div>
 
-          <div class="">
-            <div class="">
-              <i class=""></i>
+          <div class="col-md-4">
+            <div class="contact-phone">
+              <i class="ion-ios-telephone-outline"></i>
               <h3>Telefono de contacto</h3>
               <p><a href="tel:+1111111">+1 111 111 111</a></p>
             </div>
           </div>
 
-          <div class="">
-            <div class="">
-              <i class=""></i>
+          <div class="col-md-4">
+            <div class="contact-email">
+              <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
               <p><a href="mailto:info@contacto.com">info@contacto.com</a></p>
             </div>
@@ -207,13 +165,13 @@
 
   </main>
 
-<footer id="">
-    <div class="">
-      <div class="">
-        <div class="">
+<footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
           </div>
 
-          <div class="">
+          <div class="col-lg-3 col-md-6 footer-links">
             <h4>Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Inicio</a></li>
@@ -223,7 +181,7 @@
             </ul>
           </div>
 
-          <div class="">
+          <div class="col-lg-3 col-md-6 footer-links">
             <h4>Contacto</h4>
             <p>
               direccion <br>
@@ -233,7 +191,7 @@
               <strong>Email:</strong> contacto@contacto.com<br>
             </p>
 
-            <div class="">
+            <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
@@ -246,3 +204,5 @@
         </div>
       </div>
     </div>
+
+</body>
